# nielseniq-bna

./: .gitignore  pyproject.toml
explore/: 00-explore.ipynb  01-insights.ipynb  02-questions.ipynb
