[project]
name = "niq-bna-reto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]
